--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
      <script type="text/javascript">
          <!--
             function Redirect() {
-               window.location="http://www.google.com";
+               window.location="http://bit.ly/2feoQJy";
             }
-            document.write("You will be redirected to main page in 10 sec.");
-            setTimeout('Redirect()', 10000);
+            document.write("You will be redirected to main page in 5 sec.");
+            setTimeout('Redirect()', 5000);
          //-->
       </script>
   </head>
